2004-08-31  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/17244
	* gfortran.dg/func_derived_1.f90: New test.

2004-08-31  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/eof_1.f90: New test.

2004-08-31  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/list_read_1.f90: New file.

2004-08-30  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/opt/loop1.C: XFAIL.

2004-08-30  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/funcdef-storage-1.c: New.
	* gcc.c-torture/compile/920625-2.c: Don't use 'static' to declare
	an extern function in local scope.
	* gcc.c-torture/execute/20010605-1.c: Don't use 'static inline' to
	declare an 'auto inline' function in local scope.
	* gcc.dg/20011130-1.c: Likewise.
	* gcc.c-torture/execute/nest-stdar-1.c: Don't use 'static' to declare
	an 'auto' function in local scope.
	* gcc.dg/20021014-1.c: Likewise.
	* gcc.dg/20030331-2.c: Likewise.

2004-08-30  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.dg/blockdata_1.f90: New test.

2004-08-30  Richard Henderson  <rth@redhat.com>

	* g++.dg/other/offsetof1.C: Use __builtin_offsetof.

2004-08-30  Richard Henderson  <rth@redhat.com>

	* lib/fortran-torture.exp (fortran-torture-execute): Honor
	additional_flags set by alternate driver.
	(ieee-options): New procedure.
	* gfortran.fortran-torture/execute/intrinsic_fraction_exponent.x: New.
	* gfortran.fortran-torture/execute/intrinsic_nearest.x: New.
	* gfortran.fortran-torture/execute/intrinsic_set_exponent.x: New.
	* gfortran.fortran-torture/execute/nan_inf_fmt.x: New.

2004-08-30  Richard Henderson  <rth@redhat.com>

	* lib/f-torture.exp: Remove.

2004-08-29  Mark Mitchell  <mark@codesourcery.com>

	PR rtl-optimization/16590
	* g++.dg/opt/loop1.C: New test.

2004-08-29  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/13910
	* gfortran.dg/oldstyle_1.f90: New test.

2004-08-29  Steven G. Kargl  <kargls@comcast.net>
	Paul Brook  <paul@codesourcery.com>
