@@ -4,6 +4,9 @@
 // Contributed by Nathan Sidwell 14 Aug 2002 <nathan@codesourcery.com>
 
 // PR c++ 7598, offsetof broke
+// PR c++ 11072, DR 273's solution is broken
+
+#include <cstddef>
 
 struct F
 {
@@ -11,4 +14,4 @@ struct F
   char j;
 };
 
-static int ary[__builtin_offsetof(F, j)];
+static int ary[offsetof(F, j)];
